--- a/index.html
+++ b/index.html
@@ -147,27 +147,27 @@
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
                             <img src="resources/images/erp/erp.png" class="card-img-top project-thumb" alt="...">
-                            <div class="card-body d-flex flex-column">
+                            <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">ERP System</h5>
                                 <p class="card-text">An ERP System (Point of Sale) with HTML, CSS + Spring MVC</p>
-                                <button onclick="popup('erp', 'Project Details', 'View Application', 'btn-dark', 'https://fastsolutions.herokuapp.com/')" class="btn btn-dark mt-auto">View Details</button>
+                                <button onclick="popup('erp', 'Project Details', 'View Application', 'btn-dark', 'https://fastsolutions.herokuapp.com/')" class="btn btn-dark">View Details</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
                             <img src="resources/images/cge/cge.png" class="card-img-top project-thumb" alt="...">
-                            <div class="card-body d-flex flex-column">
+                            <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Weighing Software</h5>
                                 <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features. </p>
-                                <button onclick="popup('cge', 'Project Details')" class="btn btn-orange mt-auto">View Details</button>
+                                <button onclick="popup('cge', 'Project Details')" class="btn btn-orange">View Details</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
                             <img src="resources/images/laknewan/laknewan.png" class="card-img-top project-thumb" alt="...">
-                            <div class="card-body d-flex flex-column">
+                            <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Shopping Website (Collaborative Project)</h5>
                                 <p class="card-text">Online Shopping Website created with PHP. </p>
                                 <button onclick="popup('laknewan', 'Project Details', 'View Website', 'btn-primary', 'https://laknewan.com/')" class="btn btn-primary mt-auto">View Details</button>
