--- a/cge.html
+++ b/cge.html
@@ -21,7 +21,7 @@
 <!--    <img src="resources/images/cge/018.png" class="img-fluid" alt="image-018">-->
 </div>
 
-<div class="card">
+<div class="card details">
     <div class="card-body">
         <h5 class="card-title mb-3">Project Details</h5>
         <section class="ms-4">
