--- a/laknewan.html
+++ b/laknewan.html
@@ -5,7 +5,7 @@
     <img src="resources/images/laknewan/001.png" class="img-fluid" alt="image-001">
 </div>
 
-<div class="card">
+<div class="card details">
     <div class="card-body">
         <h5 class="card-title mb-3">Project Details</h5>
         <section class="ms-4">
