--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-sm-12 mb-5 m-auto mt-5">
-                        <div class="card shadow mt-5 mx-5">
+                        <div class="card details shadow mt-5 mx-5">
                             <div class="card-body d-flex flex-column text-center">
                                 <h1 class="card-title">Making some changes</h1>
                                 <p class="card-text">We are still building...</p>
