Turn back on loader

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div class="body">
-    <div class="loader-backdrop d-none">
+    <div class="loader-backdrop">
         <div class="load-holder">
             <div class="m-loader">
                 <span class="e-text">Loading</span>
