Update CGE project tools

--- a/cge.html
+++ b/cge.html
@@ -57,6 +57,16 @@
                     </li>
                 </ul>
             </div>
+            <h5 class="card-subtitle mb-2 text-muted">Other Tools</h5>
+            <div class="card-text mb-2 ms-3">
+                <ul>
+                    <li>Electron JS
+                        <ul>
+                            <li>For wrapping Web Application as a Windows Application</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
             <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
         </section>
         <div class="container-fluid gallery mt-3">
