Update CGE project tools

--- a/projects/erp.html
+++ b/projects/erp.html
@@ -2,7 +2,7 @@
 <h1 class="mt-5 mb-5 text-center">ERP Software (Point of Sale)</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="resources/images/erp/001.png" class="img-fluid" alt="image-001">
+    <img src="../resources/images/erp/001.png" class="img-fluid" alt="image-001">
 </div>
 
 <div class="card details">
