Update CGE project tools

--- a/projects/cge.html
+++ b/projects/cge.html
@@ -44,14 +44,14 @@
             <h5 class="card-subtitle mb-2 text-muted">Frameworks and Libraries</h5>
             <div class="card-text mb-2 ms-3">
                 <ul>
-                    <li>JAVA (Backend)
+                    <li>JAVA (Back-end)
                         <ul>
                             <li>Spring Boot Framework</li>
                         </ul>
                     </li>
-                    <li>Angular (Frontend)
+                    <li>Angular (Front-end)
                         <ul>
-                            <li>Angular CLI</li>
+                            <li>Angular 11</li>
                             <li>Angular Material UI</li>
                         </ul>
                     </li>
