--- a/projects/erp.html
+++ b/projects/erp.html
@@ -13,6 +13,7 @@
             <div class="card-text mb-2 ms-3">
                 <ul>
                     <li>JAVA</li>
+                    <li>JSP</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
@@ -28,12 +29,12 @@
             <h5 class="card-subtitle mb-2 text-muted">Frameworks and Libraries</h5>
             <div class="card-text mb-2 ms-3">
                 <ul>
-                    <li>JAVA
+                    <li>JAVA (Back-end)
                         <ul>
                             <li>Spring MVC Framework</li>
                         </ul>
                     </li>
-                    <li>JavaScript
+                    <li>JavaScript (Front-end)
                         <ul>
                             <li>jQuery Library</li>
                         </ul>
