--- a/projects/momento_chat.html
+++ b/projects/momento_chat.html
@@ -1,24 +1,23 @@
 
-<h1 class="mt-5 mb-5 text-center">Momento</h1>
+<h1 class="mt-5 mb-5 text-center">Momento Chat</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/momento/momento.png" class="img-fluid" alt="image-001">
+    <img src="../resources/images/momento_chat/momento_chat.png" class="img-fluid" alt="image-001">
 </div>
 
 <div class="card details">
     <div class="card-body">
         <h5 class="card-title mb-3">Project Details</h5>
         <section class="ms-4">
-            <h4 class="py-3">Backend for the Mobile Application and Web Admin Frontend and also some Interfaces for the Web Admin Frontend of <a href="https://momento.lk/">Momento</a>, An event planing platform</h4>
+            <h4 class="py-3">Chat Backend for the Mobile Application and Web Admin Frontend and also all Web Admin Frontend Chat Interfaces of <a href="https://momento.lk/">Momento</a>, An event planing platform</h4>
             <h5 class="card-subtitle mb-2 text-muted">Functionalities</h5>
             <div class="card-text mb-2 ms-3">
                 <ul>
-                    <li>Manage Events, Services, Subscription & Plans, Providers, Companies</li>
-                    <li>Ratings</li>
-                    <li>Referrals</li>
-                    <li>Statistics</li>
-                    <li>Reports</li>
-                    <li>OTP Verification Functionally</li>
+                    <li>Single Chat</li>
+                    <li>Group Chat</li>
+                    <li>Group Admins</li>
+                    <li>Send Broadcast Messages</li>
+                    <li>Delete Messages</li>
                 </ul>
             </div>
             <h5 class="card-subtitle mb-2 text-muted">Used Languages</h5>
@@ -48,7 +47,9 @@
                 <ul>
                     <li>NodeJS (Back-end)
                         <ul>
+                            <li>NestJS</li>
                             <li>Express</li>
+                            <li>SocketIO</li>
                         </ul>
                     </li>
                     <li>Angular (Front-end)
@@ -61,16 +62,14 @@
             </div>
         </section>
         <div class="container-fluid gallery mt-3 p-5 bg-darker-white">
-            <img src="../resources/images/momento/001.png" class="img-fluid" alt="image-001">
-            <img src="../resources/images/momento/002.png" class="img-fluid" alt="image-002">
-            <img src="../resources/images/momento/003.png" class="img-fluid" alt="image-003">
-            <img src="../resources/images/momento/004.png" class="img-fluid" alt="image-004">
-            <img src="../resources/images/momento/005.png" class="img-fluid" alt="image-005">
-            <img src="../resources/images/momento/006.png" class="img-fluid" alt="image-006">
-            <img src="../resources/images/momento/007.png" class="img-fluid" alt="image-007">
-            <img src="../resources/images/momento/008.png" class="img-fluid" alt="image-008">
-            <img src="../resources/images/momento/009.png" class="img-fluid" alt="image-009">
-            <img src="../resources/images/momento/010.png" class="img-fluid" alt="image-010">
+            <img src="../resources/images/momento_chat/001.png" class="img-fluid" alt="image-001">
+            <img src="../resources/images/momento_chat/002.png" class="img-fluid" alt="image-002">
+            <img src="../resources/images/momento_chat/003.png" class="img-fluid" alt="image-003">
+            <img src="../resources/images/momento_chat/004.png" class="img-fluid" alt="image-004">
+            <img src="../resources/images/momento_chat/005.png" class="img-fluid" alt="image-005">
+            <img src="../resources/images/momento_chat/006.png" class="img-fluid" alt="image-006">
+            <img src="../resources/images/momento_chat/007.png" class="img-fluid" alt="image-007">
+            <img src="../resources/images/momento_chat/008.png" class="img-fluid" alt="image-008">
         </div>
     </div>
 </div>
