--- a/index.html
+++ b/index.html
@@ -146,6 +146,26 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
+                            <img src="resources/images/momento/momento.png" class="card-img-top project-thumb" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-end">
+                                <h5 class="card-title">Momento - (Back-end and Web Admin Interfaces)</h5>
+                                <p class="card-text">An Event Planing Platform (Mobile App)</p>
+                                <button onclick="popup('momento', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
+                            <img src="resources/images/momento_chat/momento_chat.png" class="card-img-top project-thumb" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-end">
+                                <h5 class="card-title">Momento Chat - (Back-end and Web Admin Interfaces)</h5>
+                                <p class="card-text">Chat implementation for Momento (Mobile App)</p>
+                                <button onclick="popup('momento_chat', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
                             <img src="resources/images/erp/erp.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">ERP System</h5>
@@ -174,17 +194,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-12 mb-5">
-                        <div class="card shadow h-100">
-                            <img src="resources/images/momento/momento.png" class="card-img-top project-thumb" alt="...">
-                            <div class="card-body d-flex flex-column justify-content-end">
-                                <h5 class="card-title">Momento - Back-end</h5>
-                                <p class="card-text">An Event Planing Platform (Mobile App)</p>
-                                <button onclick="popup('momento', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
+
                 <div class="row">
                     <div class="col-md-6 col-sm-12 mb-5 m-auto mt-5">
                         <div class="card details shadow mt-5 mx-5">
