Update Momento Project

--- a/projects/momento_chat.html
+++ b/projects/momento_chat.html
@@ -9,7 +9,7 @@
     <div class="card-body">
         <h5 class="card-title mb-3">Project Details</h5>
         <section class="ms-4">
-            <h4 class="py-3">Chat Backend for the Mobile Application and Web Admin Frontend and also all Web Admin Frontend Chat Interfaces of <a href="https://momento.lk/">Momento</a>, An event planing platform</h4>
+            <h4 class="py-3">Chat Back-end for the Momento Mobile Application and Web Admin Front-end and also all Web Admin Front-end Chat Interfaces of <a href="https://momento.lk/">Momento</a>, An event planing platform</h4>
             <h5 class="card-subtitle mb-2 text-muted">Functionalities</h5>
             <div class="card-text mb-2 ms-3">
                 <ul>
