--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <img src="resources/images/momento/momento.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Momento - (Back-end and Web Admin Interfaces)</h5>
-                                <p class="card-text">An Event Planing Platform (Mobile App)</p>
+                                <p class="card-text">Back-end and Web Admin for an Event Planing Platform (Mobile App) Using Node Express + Angular</p>
                                 <button onclick="popup('momento', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                             <img src="resources/images/momento_chat/momento_chat.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Momento Chat - (Back-end and Web Admin Interfaces)</h5>
-                                <p class="card-text">Chat implementation for Momento (Mobile App)</p>
+                                <p class="card-text">Chat Back-end and Web Admin Chat implementation for Momento (Mobile App) Using NestJS + Angular</p>
                                 <button onclick="popup('momento_chat', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
