--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <img src="resources/images/erp/erp.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">ERP System</h5>
-                                <p class="card-text">An ERP System (Point of Sale) with HTML, CSS + Spring MVC</p>
+                                <p class="card-text">An ERP System (Point of Sale) with HTML, JSP, CSS, JS + Spring MVC</p>
                                 <button onclick="popup('erp', 'Project Details', 'View Application', 'btn-dark', 'https://fastsolutions.herokuapp.com/')" class="btn btn-dark">View Details</button>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <img src="resources/images/cge/cge.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Weighing Software</h5>
-                                <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features. </p>
+                                <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features.</p>
                                 <button onclick="popup('cge', 'Project Details')" class="btn btn-orange">View Details</button>
                             </div>
                         </div>
