--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Momento - (Back-end and Web Admin Interfaces)</h5>
                                 <p class="card-text">Back-end and Web Admin for an Event Planing Platform (Mobile App) Using Node Express + Angular</p>
+                                <p class="card-text">Company - Infact Solutions (PVT) Ltd</p>
                                 <button onclick="popup('momento', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
@@ -160,6 +161,7 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Momento Chat - (Back-end and Web Admin Interfaces)</h5>
                                 <p class="card-text">Chat Back-end and Web Admin Chat implementation for Momento (Mobile App) Using NestJS + Angular</p>
+                                <p class="card-text">Company - Infact Solutions (PVT) Ltd</p>
                                 <button onclick="popup('momento_chat', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
@@ -180,6 +182,7 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Weighing Software</h5>
                                 <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features.</p>
+                                <p class="card-text">Company - Ceylon Weighing Machines Ltd.
                                 <button onclick="popup('cge', 'Project Details')" class="btn btn-orange">View Details</button>
                             </div>
                         </div>
