--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="assets/jquery.ripples/jquery.ripples-min.js"></script>
     <script src="js/index.js"></script>
     <script>
-        // $(()=>{$('.loader-backdrop').hide()});
+        // $(()=>{$('.loader-backdrop').hide()}); // TODOS
     </script>
     <title>Waruna Udayanga</title>
 </head>
@@ -150,7 +150,7 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Momento - (Back-end and Web Admin Interfaces)</h5>
                                 <p class="card-text">Back-end and Web Admin for an Event Planing Platform (Mobile App) Using Node Express + Angular</p>
-                                <p class="card-text">Company - Infact Solutions (PVT) Ltd</p>
+                                <p class="card-text">Company - Infact Solutions (PVT) Ltd.</p>
                                 <button onclick="popup('momento', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Momento Chat - (Back-end and Web Admin Interfaces)</h5>
                                 <p class="card-text">Chat Back-end and Web Admin Chat implementation for Momento (Mobile App) Using NestJS + Angular</p>
-                                <p class="card-text">Company - Infact Solutions (PVT) Ltd</p>
+                                <p class="card-text">Company - Infact Solutions (PVT) Ltd.</p>
                                 <button onclick="popup('momento_chat', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
@@ -178,22 +178,44 @@
                     </div>
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
+                            <img src="resources/images/laknewan/laknewan.png" class="card-img-top project-thumb" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-end">
+                                <h5 class="card-title">Laknewan (Collaborative Project)</h5>
+                                <p class="card-text">Online Shopping Website created with PHP. </p>
+                                <button onclick="popup('laknewan', 'Project Details', 'View Website', 'btn-primary', 'https://laknewan.com/')" class="btn btn-primary mt-auto">View Details</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
                             <img src="resources/images/cge/cge.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Weighing Software</h5>
                                 <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features.</p>
-                                <p class="card-text">Company - Ceylon Weighing Machines Ltd.
+                                <p class="card-text">Company - Ceylon Weighing Machines Ltd.</p>
                                 <button onclick="popup('cge', 'Project Details')" class="btn btn-orange">View Details</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
-                            <img src="resources/images/laknewan/laknewan.png" class="card-img-top project-thumb" alt="...">
+                            <img src="resources/images/tea/tea.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
-                                <h5 class="card-title">Shopping Website (Collaborative Project)</h5>
-                                <p class="card-text">Online Shopping Website created with PHP. </p>
-                                <button onclick="popup('laknewan', 'Project Details', 'View Website', 'btn-primary', 'https://laknewan.com/')" class="btn btn-primary mt-auto">View Details</button>
+                                <h5 class="card-title">Weighing Software</h5>
+                                <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features.</p>
+                                <p class="card-text">Company - Ceylon Weighing Machines Ltd.</p>
+                                <button onclick="popup('tea', 'Project Details')" class="btn btn-orange">View Details</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
+                            <img src="resources/images/compareme/compareme.png" class="card-img-top project-thumb" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-end">
+                                <h5 class="card-title">CompareMe</h5>
+                                <p class="card-text">PHP + jQuery Website for Comparing Devices (Mobiles, Laptops, etc.).</p>
+                                <!--suppress HttpUrlsUsage -->
+                                <button onclick="popup('compareme', 'Project Details', 'View Website', 'btn-dark', 'http://compareme.tk/')" class="btn btn-dark">View Details</button>
                             </div>
                         </div>
                     </div>
