--- a/projects/tea.html
+++ b/projects/tea.html
@@ -1,22 +1,20 @@
 <h1 class="mt-5 mb-5 text-center">Weighing Software</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/cge/004.png" class="img-fluid" alt="image-001">
+    <img src="../resources/images/tea/tea.png" class="img-fluid" alt="image-001">
 </div>
 
 <div class="card details">
     <div class="card-body">
         <h5 class="card-title mb-3">Project Details</h5>
         <section class="ms-4">
-            <h4 class="py-3">Front-end and Back-end of a Weighting Software for Ceylon Grain Elevators PLC (Prima)</h4>
+            <h4 class="py-3">Front-end and Back-end of a Weighting Software for Tea Bags</h4>
             <h5 class="card-subtitle mb-2 text-muted">Functionalities</h5>
             <div class="card-text mb-2 ms-3">
                 <ul>
                     <li>Read data from indicator through TCP/IP</li>
-                    <li>Sending feedback to display through Serial Com Port</li>
-                    <li>Scheduled Database backups to a remote Database</li>
                     <li>Managing weightings data</li>
-                    <li>Generate Reports (Daily / Weekly / Monthly / Annually)</li>
+                    <li>Generate Reports</li>
                 </ul>
             </div>
             <h5 class="card-subtitle mb-2 text-muted">Used Languages</h5>
@@ -65,24 +63,10 @@
             <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
         </section>
         <div class="container-fluid gallery mt-3">
-            <img src="../resources/images/cge/001.png" class="img-fluid" alt="image-001">
-            <img src="../resources/images/cge/002.png" class="img-fluid" alt="image-002">
-            <img src="../resources/images/cge/003.png" class="img-fluid" alt="image-003">
-            <img src="../resources/images/cge/004.png" class="img-fluid" alt="image-004">
-            <img src="../resources/images/cge/005.png" class="img-fluid" alt="image-005">
-            <img src="../resources/images/cge/006.png" class="img-fluid" alt="image-006">
-            <img src="../resources/images/cge/007.png" class="img-fluid" alt="image-007">
-            <img src="../resources/images/cge/008.png" class="img-fluid" alt="image-008">
-            <img src="../resources/images/cge/009.png" class="img-fluid" alt="image-009">
-            <img src="../resources/images/cge/010.png" class="img-fluid" alt="image-010">
-            <img src="../resources/images/cge/011.png" class="img-fluid" alt="image-011">
-            <img src="../resources/images/cge/012.png" class="img-fluid" alt="image-012">
-            <img src="../resources/images/cge/013.png" class="img-fluid" alt="image-013">
-            <img src="../resources/images/cge/014.png" class="img-fluid" alt="image-014">
-            <img src="../resources/images/cge/015.png" class="img-fluid" alt="image-015">
-            <img src="../resources/images/cge/016.png" class="img-fluid" alt="image-016">
-            <img src="../resources/images/cge/017.png" class="img-fluid" alt="image-017">
-            <img src="../resources/images/cge/018.png" class="img-fluid" alt="image-018">
+            <img src="../resources/images/tea/001.png" class="img-fluid" alt="image-001">
+            <img src="../resources/images/tea/002.png" class="img-fluid" alt="image-002">
+            <img src="../resources/images/tea/003.png" class="img-fluid" alt="image-003">
+            <img src="../resources/images/tea/004.png" class="img-fluid" alt="image-004">
         </div>
     </div>
 </div>
