--- a/index.html
+++ b/index.html
@@ -210,6 +210,16 @@
                     </div>
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
+                            <img src="resources/images/ck/ck.png" class="card-img-top project-thumb" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-end">
+                                <h5 class="card-title">CK Electronics</h5>
+                                <p class="card-text">PHP + jQuery Stock, Purchases and Services Managing System of a Computer & TV Repair shop.</p>
+                                <button onclick="popup('ck', 'Project Details')" class="btn btn-yellow">View Details</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
                             <img src="resources/images/compareme/compareme.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">CompareMe</h5>
