--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     <h2 class="fw-bold"></h2>
                     <h4 class="offset-1 offset-md-1 offset-lg-1 col-10 col-md-10 col-lg-10 text-responsive">
                         I am a Sri Lankan based Software Engineer and a Full Stack Web Developer. I design Web Applications,
-                        front-end with Angular&nbsp;+&nbsp;Material, Bootstrap&nbsp;+&nbsp;jQuery, HTML, CSS and back-end with NodeJS&nbsp;+&nbsp;Express,
-                        Java&nbsp;+&nbsp;Spring Boot, As well as Desktop Applications based on above technologies with the use of ElectronJS.
+                        front-end with Angular&nbsp;Material, Bootstrap&nbsp;& jQuery, HTML, CSS and back-end with NodeJS&nbsp;Express, NestJS,
+                        Java&nbsp;Spring Boot, As well as Desktop Applications based on above technologies with the use of ElectronJS.
                         I also develop Desktop Application in JavaFX.
                     </h4>
                 </div>
@@ -231,22 +231,19 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 mb-5 m-auto mt-5">
-                        <div class="card details shadow mt-5 mx-5">
-                            <div class="card-body d-flex flex-column text-center">
-                                <h1 class="card-title">Making some changes</h1>
-                                <p class="card-text">We are still building...</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="row">-->
+<!--                    <div class="col-md-6 col-sm-12 mb-5 m-auto mt-5">-->
+<!--                        <div class="card details shadow mt-5 mx-5">-->
+<!--                            <div class="card-body d-flex flex-column text-center">-->
+<!--                                <h1 class="card-title">Making some changes</h1>-->
+<!--                                <p class="card-text">We are still building...</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+
             </section>
 
-            <br>
-            <br>
-            <br>
-            <br>
             <br>
 
         </div>
