Changed profile image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="coco position-absolute top-0 w-100 h-100">
             </div>
             <div class="container position-relative overflow-hidden py-3">
-                <img src="resources/images/me.png" class="img-thumbnail glass bordered profile-picture mb-3" alt="profile-picture">
+                <img src="resources/images/me_new.png" class="img-thumbnail glass bordered profile-picture mb-3" alt="profile-picture">
                 <div class="greeting d-flex flex-column align-items-center">
                     <div class="glass s1 m-0 py-1 px-3 mb-3">Hello.</div>
                     <div class="glass s2 m-0 pt-1 pb-2 px-3 mb-3">I'm Waruna Udayanga</div>
