Added routing for projects :)

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <h5 class="card-title">Momento - (Back-end and Web Admin Interfaces)</h5>
                                 <p class="card-text">Back-end and Web Admin for an Event Planing Platform (Mobile App) Using Node Express + Angular</p>
                                 <p class="card-text">Company - Infact Solutions (PVT) Ltd.</p>
-                                <button onclick="popup('momento', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
+                                <button id="momento" onclick="popup('momento', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
                     </div>
@@ -162,17 +162,17 @@
                                 <h5 class="card-title">Momento Chat - (Back-end and Web Admin Interfaces)</h5>
                                 <p class="card-text">Chat Back-end and Web Admin Chat implementation for Momento (Mobile App) Using NestJS + Angular</p>
                                 <p class="card-text">Company - Infact Solutions (PVT) Ltd.</p>
-                                <button onclick="popup('momento_chat', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
+                                <button id="momento_chat" onclick="popup('momento_chat', 'Project Details', 'View Website', 'btn-success', 'https://momento.lk/')" class="btn btn-success mt-auto">View Details</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
-                            <img src="resources/images/erp/erp.png" class="card-img-top project-thumb" alt="...">
+                            <img src="resources/images/pos/pos.png" class="card-img-top project-thumb" alt="...">
                             <div class="card-body d-flex flex-column justify-content-end">
-                                <h5 class="card-title">ERP System</h5>
-                                <p class="card-text">An ERP System (Point of Sale) with HTML, JSP, CSS, JS + Spring MVC</p>
-                                <button onclick="popup('erp', 'Project Details', 'View Application', 'btn-dark', 'https://fastsolutions.herokuapp.com/')" class="btn btn-dark">View Details</button>
+                                <h5 class="card-title">Simple POS System</h5>
+                                <p class="card-text">A POS System (Point of Sale) with HTML, JSP, CSS, JS + Spring MVC</p>
+                                <button id="pos" onclick="popup('pos', 'Project Details', 'View Application', 'btn-dark', 'https://fastsolutions.herokuapp.com/')" class="btn btn-dark">View Details</button>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">Laknewan (Collaborative Project)</h5>
                                 <p class="card-text">Online Shopping Website created with PHP. </p>
-                                <button onclick="popup('laknewan', 'Project Details', 'View Website', 'btn-primary', 'https://laknewan.com/')" class="btn btn-primary mt-auto">View Details</button>
+                                <button id="laknewan" onclick="popup('laknewan', 'Project Details', 'View Website', 'btn-primary', 'https://laknewan.com/')" class="btn btn-primary mt-auto">View Details</button>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                                 <h5 class="card-title">Weighing Software</h5>
                                 <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features.</p>
                                 <p class="card-text">Company - Ceylon Weighing Machines Ltd.</p>
-                                <button onclick="popup('cge', 'Project Details')" class="btn btn-orange">View Details</button>
+                                <button id="cge" onclick="popup('cge', 'Project Details')" class="btn btn-orange">View Details</button>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                                 <h5 class="card-title">Weighing Software</h5>
                                 <p class="card-text">Angular + Spring Boot + Electron application for Weighing indication and reporting features.</p>
                                 <p class="card-text">Company - Ceylon Weighing Machines Ltd.</p>
-                                <button onclick="popup('tea', 'Project Details')" class="btn btn-orange">View Details</button>
+                                <button id="tea" onclick="popup('tea', 'Project Details')" class="btn btn-orange">View Details</button>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">CK Electronics</h5>
                                 <p class="card-text">PHP + jQuery Stock, Purchases and Services Managing System of a Computer & TV Repair shop.</p>
-                                <button onclick="popup('ck', 'Project Details')" class="btn btn-yellow">View Details</button>
+                                <button id="ck" onclick="popup('ck', 'Project Details')" class="btn btn-yellow">View Details</button>
                             </div>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                                 <h5 class="card-title">CompareMe</h5>
                                 <p class="card-text">PHP + jQuery Website for Comparing Devices (Mobiles, Laptops, etc.).</p>
                                 <!--suppress HttpUrlsUsage -->
-                                <button onclick="popup('compareme', 'Project Details', 'View Website', 'btn-dark', 'http://compareme.tk/')" class="btn btn-dark">View Details</button>
+                                <button id="compare_me" onclick="popup('compareme', 'Project Details', 'View Website', 'btn-dark', 'http://compareme.tk/')" class="btn btn-dark">View Details</button>
                             </div>
                         </div>
                     </div>
