--- a/projects/pos.html
+++ b/projects/pos.html
@@ -2,13 +2,21 @@
 <h1 class="mt-5 mb-5 text-center">POS System (Point of Sale)</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/pos/001.png" class="img-fluid" alt="image-001">
+    <img src="../resources/images/pos/pos.png" class="img-fluid" alt="image-001">
 </div>
 
 <div class="card details">
     <div class="card-body">
         <h5 class="card-title mb-3">Project Details</h5>
         <section class="ms-4">
+            <h5 class="card-subtitle mb-2 text-muted">Info</h5>
+            <div class="card-text mb-2 ms-3">
+                <p>
+                    This project was developed as the final assignment for the <b>ICT
+                    (NVQ Level 5) Diploma</b> program at the College of Technology in Galle.
+                    This is a simple POS system for a small business
+                </p>
+            </div>
             <h5 class="card-subtitle mb-2 text-muted">Used Languages</h5>
             <div class="card-text mb-2 ms-3">
                 <ul>
@@ -48,8 +56,37 @@
                 </ul>
             </div>
             <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
-            <p class="card-text ms-4">Use this ID and Password to log in to system (Add / Change / Delete features are disabled in testing users)</p>
-            <pre class="ms-5 mb-3">User ID  : 6<br>Password : 0000</pre>
+            <p class="card-text ms-4">Use this ID and Password to log in to the system (Add / Change / Delete features are disabled in testing users), Some features may not be available for the test user</p>
+            <pre class="ms-5 mb-3">User ID  : 2<br>Password : johndoe</pre>
         </section>
+
+        <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
+
+        <div class="container-fluid gallery mt-3">
+            <img src="../resources/images/pos/001.png" class="img-fluid" alt="image-001">
+            <img src="../resources/images/pos/002.png" class="img-fluid" alt="image-002">
+            <img src="../resources/images/pos/003.png" class="img-fluid" alt="image-003">
+            <img src="../resources/images/pos/004.png" class="img-fluid" alt="image-004">
+            <img src="../resources/images/pos/005.png" class="img-fluid" alt="image-005">
+            <img src="../resources/images/pos/006.png" class="img-fluid" alt="image-006">
+            <img src="../resources/images/pos/007.png" class="img-fluid" alt="image-007">
+            <img src="../resources/images/pos/008.png" class="img-fluid" alt="image-008">
+            <img src="../resources/images/pos/009.png" class="img-fluid" alt="image-009">
+            <img src="../resources/images/pos/010.png" class="img-fluid" alt="image-010">
+            <img src="../resources/images/pos/011.png" class="img-fluid" alt="image-011">
+            <img src="../resources/images/pos/012.png" class="img-fluid" alt="image-012">
+            <img src="../resources/images/pos/013.png" class="img-fluid" alt="image-013">
+            <img src="../resources/images/pos/014.png" class="img-fluid" alt="image-014">
+        </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
