--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 <p class="card-text">Online Shopping Website created with PHP.</p>
                                 <button class="btn btn-primary mt-auto"
                                         id="laknewan"
-                                        onclick="popup('laknewan', 'Project Details', 'View Website', 'btn-primary', 'https://laknewan.com/')">
+                                        onclick="popup('laknewan', 'Project Details')">
                                     View Details
                                 </button>
                             </div>
