--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="greeting d-flex flex-column align-items-center">
                     <div class="glass s1 m-0 py-1 px-3 mb-3">Hello.</div>
                     <div class="glass s2 m-0 pt-1 pb-2 px-3 mb-3">I'm Waruna Udayanga</div>
-                    <div class="glass s3 m-0 pt-1 pb-2 px-3">Software Engineer | Web Developer</div>
+                    <div class="glass s3 m-0 pt-1 pb-2 px-3">Senior Software Engineer (Full Stack)</div>
                 </div>
                 <button class="btn btn-outline-light glass bordered click-me d-block mx-auto"><span>View More <i
                     class="fas fa-angle-down"></i></span></button>
@@ -93,16 +93,31 @@
             <section class="section about">
                 <h1 class="pt-3 mb-5 text-center robo-r fw-bold"><small class="text-muted">#</small> Let me introduce
                     myself. </h1>
-                <div class="row">
-                    <h2 class="fw-bold"></h2>
-                    <h4 class="offset-1 offset-md-1 offset-lg-1 col-10 col-md-10 col-lg-10 text-responsive">
-                        I am a Sri Lankan based Senior Software Engineer and a Full Stack Web Developer. I design Web
-                        Applications,
-                        front-end with Angular&nbsp;Material, Bootstrap&nbsp;& jQuery, HTML, CSS and back-end with
-                        NodeJS&nbsp;Express, NestJS,
-                        Java&nbsp;Spring Boot, As well as Desktop Applications based on above technologies with the use
-                        of ElectronJS.
-                        I also develop Desktop Application in JavaFX.
+                <div class="d-flex flex-column align-items-center">
+                    <h4 class="px-md-5 mb-3">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        I am a Senior Software Engineer and Full Stack Web Developer with a focus
+                        on creating dynamic and efficient solutions.
+                        My primary stack includes Angular and NestJS,
+                        coupled with databases such as MongoDB, MySQL, and PostgresSQL.
+                        In the realm of web applications,
+                        I adeptly design front-ends using Angular, HTML, CSS, Bootstrap,
+                        JS, and jQuery, while implementing robust back-ends with NodeJS Express,
+                        NestJS, and Java Spring Boot.
+                    </h4>
+                    <h4 class="px-md-5 mb-3">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Expanding beyond web applications,
+                        I specialize in designing desktop applications through various technologies.
+                        This includes integration of web applications with ElectronJS,
+                        as well as standalone applications developed with JavaFX, C#, and .Net.
+                    </h4>
+                    <h4 class="px-md-5 mb-3">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Moreover,
+                        I possess basic knowledge of AWS services and can proficiently manage a VPS for web hosting.
+                        Additionally, I have experience with PHP and C++,
+                        rounding out my skill set and enabling me to tackle a diverse range of projects with expertise.
                     </h4>
                 </div>
 
@@ -258,6 +273,8 @@
 
             </section>
 
+            <section class="anchor" id="my"></section>
+
             <section class="section projects">
                 <h1 class="mt-3 mb-5 robo-r fw-bold"><small class="text-muted">#</small> My Personal Projects</h1>
 
@@ -348,7 +365,14 @@
             <section class="section projects">
                 <h1 class="mt-3 mb-5 robo-r fw-bold"><small class="text-muted">#</small> NPM Libraries</h1>
 
-                <div class="d-flex gap-4 mb-4">
+                <h5 class="mb-3">
+                    As a hobby, I have started to create some npm packages to help develop my projects.
+                    This is intended to be personal use only.
+                    But I have decided to publish them on npm.
+                    I have created a brand for my packages called <b>Hichchi Dev</b>.
+                </h5>
+
+                <div class="d-md-flex gap-4 mb-4">
                     <div class="d-flex gap-2 align-items-center mb-3">
                         <img src="resources/images/logos/github.png" class="img-logo" alt="image-001">
                         <a href="https://github.com/hichchidev" target="_blank">hichchidev</a>
@@ -368,10 +392,6 @@
                 </div>
 
                 <h5 class="mb-5">
-                    As a hobby, I have started to create some npm packages to help develop my projects.
-                    This is intended to be personal use only.
-                    But I have decided to publish them on npm.
-                    I have created a brand for my packages called <b>Hichchi Dev</b>.
                     Here are my ongoing projects for npm packages. Documentation may not be available as these projects are still in progress.
                 </h5>
 
