--- a/index.html
+++ b/index.html
@@ -276,7 +276,16 @@
             <section class="anchor" id="my"></section>
 
             <section class="section projects">
-                <h1 class="mt-3 mb-5 robo-r fw-bold"><small class="text-muted">#</small> My Personal Projects</h1>
+                <h1 class="mt-3 mb-3 robo-r fw-bold"><small class="text-muted">#</small> My Personal Projects</h1>
+
+                <h4 class="mb-5">
+                    <span class="text-danger">*</span> Please be advised that there might be a brief delay in accessing live projects initially,
+                    as the backend servers are hosted on Render.
+                    Render utilizes an idle sleep mode to optimize resource usage.
+                    Once the servers have spun up for the first time,
+                    subsequent interactions with the projects should work seamlessly.
+                    Thank you for your understanding.
+                </h4>
 
                 <div class="row">
 
@@ -408,6 +417,25 @@
                                         onclick="popup('compareme', 'Project Details')">
                                     View Details
                                 </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
+                            <div class="d-flex h-100 flex-column align-items-center justify-content-center">
+                                <div class="d-flex align-items-center justify-content-center gap-5 mb-5">
+                                    <div class="rocket">🔧</div>
+                                    <h1 class="text-center">
+                                        Portfolio Update <br> in Progress!
+                                    </h1>
+                                    <div class="rocket">🔧</div>
+                                </div>
+                                <h4 class="px-5">
+                                    Currently in the process of updating and adding new projects to the portfolio.
+                                    If you're browsing now, more exciting projects will be coming your way soon.
+                                    Thank you for your interest and stay tuned for the latest updates!
+                                </h4>
                             </div>
                         </div>
                     </div>
