Add preloading back

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <script src="assets/jquery.ripples/jquery.ripples-min.js"></script>
     <script src="js/index.js"></script>
     <script>
-        $(() => {
-            $('.loader-backdrop').hide()
-        });
+        // $(() => {
+        //     $('.loader-backdrop').hide()
+        // });
     </script>
     <title>Waruna Udayanga</title>
 </head>
