--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="glass s3 m-0 pt-1 pb-2 px-3">Senior Software Engineer (Full Stack)</div>
                 </div>
                 <button class="btn btn-outline-light glass bordered click-me d-block mx-auto"><span>View More <i
-                    class="fas fa-angle-down"></i></span></button>
+                        class="fas fa-angle-down"></i></span></button>
             </div>
         </div>
     </div>
@@ -279,7 +279,8 @@
                 <h1 class="mt-3 mb-3 robo-r fw-bold"><small class="text-muted">#</small> My Personal Projects</h1>
 
                 <h4 class="mb-5">
-                    <span class="text-danger">*</span> Please be advised that there might be a brief delay in accessing live projects initially,
+                    <span class="text-danger">*</span> Please be advised that there might be a brief delay in accessing
+                    live projects initially,
                     as the backend servers are hosted on Render.
                     Render utilizes an idle sleep mode to optimize resource usage.
                     Once the servers have spun up for the first time,
@@ -406,12 +407,42 @@
                     <div class="col-md-6 col-sm-12 mb-5">
                         <div class="card shadow h-100">
                             <img alt="..." class="card-img-top project-thumb"
+                                 src="resources/images/lstyle/lstyle.png">
+                            <div class="card-body d-flex flex-column justify-content-end">
+                                <h5 class="card-title">Learning Style Analyzer</h5>
+                                <p class="card-text">System to analyze learning styles of students (Felder-Silverman
+                                    Learning Styles Model)</p>
+                                <div class="btn-pair d-flex gap-3">
+                                    <button class="btn btn-d-green mt-auto"
+                                            id="lstyle"
+                                            onclick="popup(
+                                            'lstyle',
+                                            'Project Details',
+                                            'Open Application',
+                                            'btn-d-green',
+                                            'https://learning-style-web.vercel.app',
+                                            'https://github.com/warunaudayanga/learning-style-web',
+                                            'https://github.com/warunaudayanga/learning-style-api'
+                                        )">
+                                        View Details
+                                    </button>
+                                    <a class="btn btn-d-green mt-auto" href="https://learning-style-web.vercel.app"
+                                       target="_blank">
+                                        Open Application
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-12 mb-5">
+                        <div class="card shadow h-100">
+                            <img alt="..." class="card-img-top project-thumb"
                                  src="resources/images/compareme/compareme.png">
                             <div class="card-body d-flex flex-column justify-content-end">
                                 <h5 class="card-title">CompareMe</h5>
                                 <p class="card-text">PHP + jQuery Website for Comparing Devices (Mobiles, Laptops,
                                     etc.).</p>
-                                <!--suppress HttpUrlsUsage -->
                                 <button class="btn btn-dark"
                                         id="compare_me"
                                         onclick="popup('compareme', 'Project Details')">
@@ -421,7 +452,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-sm-12 mb-5">
+                    <div class="col-md-6 col-sm-12 mb-5" style="min-height: 450px">
                         <div class="card shadow h-100">
                             <div class="d-flex h-100 flex-column align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-center gap-5 mb-5">
