Change facebook url

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     </div>
                     <div class="d-flex gap-2 align-items-center mb-3">
                         <img alt="image-001" class="img-logo" src="resources/images/logos/facebook.png">
-                        <a href="https://web.facebook.com/profile.php?id=100094731325069" target="_blank">hichchidev</a>
+                        <a href="https://web.facebook.com/hichchidev" target="_blank">hichchidev</a>
                     </div>
                     <div class="d-flex gap-2 align-items-center mb-3">
                         <img alt="image-001" class="img-logo" src="resources/images/logos/gmail.png">
