--- a/projects/ck.html
+++ b/projects/ck.html
@@ -2,7 +2,7 @@
 <h1 class="mt-5 mb-5 text-center">CK Electronics</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/ck/ck.png" class="img-fluid image-border" alt="image-001">
+    <img src="/resources/images/ck/ck.png" class="img-fluid image-border" alt="image-001">
 </div>
 
 <div class="card details">
@@ -68,29 +68,29 @@
             <div class="row">
                 <div class="col">
                     <h4 class="mt-3 fw-bold text-center">Old Views</h4>
-                    <img src="../resources/images/ck/001.png" class="img-fluid image-border" alt="image-001">
-                    <img src="../resources/images/ck/003.png" class="img-fluid image-border" alt="image-003">
+                    <img src="/resources/images/ck/001.png" class="img-fluid image-border" alt="image-001">
+                    <img src="/resources/images/ck/003.png" class="img-fluid image-border" alt="image-003">
                 </div>
                 <div class="col">
                     <h4 class="mt-3 fw-bold text-center">New Views</h4>
-                    <img src="../resources/images/ck/002.png" class="img-fluid image-border" alt="image-002">
-                    <img src="../resources/images/ck/004.png" class="img-fluid image-border" alt="image-004">
+                    <img src="/resources/images/ck/002.png" class="img-fluid image-border" alt="image-002">
+                    <img src="/resources/images/ck/004.png" class="img-fluid image-border" alt="image-004">
                 </div>
             </div>
             <h4 class="mt-3 fw-bold text-center">New Features</h4>
-            <img src="../resources/images/ck/005.png" class="img-fluid image-border" alt="image-005">
-            <img src="../resources/images/ck/006.png" class="img-fluid image-border" alt="image-006">
-            <img src="../resources/images/ck/007.png" class="img-fluid image-border" alt="image-007">
-            <img src="../resources/images/ck/008.png" class="img-fluid image-border" alt="image-008">
-            <img src="../resources/images/ck/009.png" class="img-fluid image-border" alt="image-009">
-            <img src="../resources/images/ck/010.png" class="img-fluid image-border" alt="image-010">
-            <img src="../resources/images/ck/011.png" class="img-fluid image-border" alt="image-011">
-            <img src="../resources/images/ck/012.png" class="img-fluid image-border" alt="image-012">
-            <img src="../resources/images/ck/013.png" class="img-fluid image-border" alt="image-013">
-            <img src="../resources/images/ck/014.png" class="img-fluid image-border" alt="image-014">
-            <img src="../resources/images/ck/015.png" class="img-fluid image-border" alt="image-015">
-            <img src="../resources/images/ck/016.png" class="img-fluid image-border" alt="image-016">
-            <img src="../resources/images/ck/017.png" class="img-fluid image-border" alt="image-016">
+            <img src="/resources/images/ck/005.png" class="img-fluid image-border" alt="image-005">
+            <img src="/resources/images/ck/006.png" class="img-fluid image-border" alt="image-006">
+            <img src="/resources/images/ck/007.png" class="img-fluid image-border" alt="image-007">
+            <img src="/resources/images/ck/008.png" class="img-fluid image-border" alt="image-008">
+            <img src="/resources/images/ck/009.png" class="img-fluid image-border" alt="image-009">
+            <img src="/resources/images/ck/010.png" class="img-fluid image-border" alt="image-010">
+            <img src="/resources/images/ck/011.png" class="img-fluid image-border" alt="image-011">
+            <img src="/resources/images/ck/012.png" class="img-fluid image-border" alt="image-012">
+            <img src="/resources/images/ck/013.png" class="img-fluid image-border" alt="image-013">
+            <img src="/resources/images/ck/014.png" class="img-fluid image-border" alt="image-014">
+            <img src="/resources/images/ck/015.png" class="img-fluid image-border" alt="image-015">
+            <img src="/resources/images/ck/016.png" class="img-fluid image-border" alt="image-016">
+            <img src="/resources/images/ck/017.png" class="img-fluid image-border" alt="image-016">
         </div>
     </div>
 </div>
