--- a/projects/compareme.html
+++ b/projects/compareme.html
@@ -2,7 +2,7 @@
 <h1 class="mt-5 mb-5 text-center">CompareMe</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/compareme/compareme.png" class="img-fluid image-border" alt="image-001">
+    <img src="/resources/images/compareme/compareme.png" class="img-fluid image-border" alt="image-001">
 </div>
 
 <div class="card details">
@@ -44,12 +44,12 @@
             <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
         </section>
         <div class="container-fluid gallery mt-3">
-            <img src="../resources/images/compareme/001.png" class="img-fluid image-border" alt="image-001">
-            <img src="../resources/images/compareme/002.png" class="img-fluid image-border" alt="image-002">
-            <img src="../resources/images/compareme/003.png" class="img-fluid image-border" alt="image-003">
-            <img src="../resources/images/compareme/004.png" class="img-fluid image-border" alt="image-004">
-            <img src="../resources/images/compareme/005.png" class="img-fluid image-border" alt="image-005">
-            <img src="../resources/images/compareme/006.png" class="img-fluid image-border" alt="image-006">
+            <img src="/resources/images/compareme/001.png" class="img-fluid image-border" alt="image-001">
+            <img src="/resources/images/compareme/002.png" class="img-fluid image-border" alt="image-002">
+            <img src="/resources/images/compareme/003.png" class="img-fluid image-border" alt="image-003">
+            <img src="/resources/images/compareme/004.png" class="img-fluid image-border" alt="image-004">
+            <img src="/resources/images/compareme/005.png" class="img-fluid image-border" alt="image-005">
+            <img src="/resources/images/compareme/006.png" class="img-fluid image-border" alt="image-006">
         </div>
     </div>
 </div>
