--- a/projects/tea.html
+++ b/projects/tea.html
@@ -1,7 +1,7 @@
 <h1 class="mt-5 mb-5 text-center">Weighing Software</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/tea/tea.png" class="img-fluid image-border" alt="image-001">
+    <img src="/resources/images/tea/tea.png" class="img-fluid image-border" alt="image-001">
 </div>
 
 <div class="card details">
@@ -63,10 +63,10 @@
             <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
         </section>
         <div class="container-fluid gallery mt-3">
-            <img src="../resources/images/tea/001.png" class="img-fluid image-border" alt="image-001">
-            <img src="../resources/images/tea/002.png" class="img-fluid image-border" alt="image-002">
-            <img src="../resources/images/tea/003.png" class="img-fluid image-border" alt="image-003">
-            <img src="../resources/images/tea/004.png" class="img-fluid image-border" alt="image-004">
+            <img src="/resources/images/tea/001.png" class="img-fluid image-border" alt="image-001">
+            <img src="/resources/images/tea/002.png" class="img-fluid image-border" alt="image-002">
+            <img src="/resources/images/tea/003.png" class="img-fluid image-border" alt="image-003">
+            <img src="/resources/images/tea/004.png" class="img-fluid image-border" alt="image-004">
         </div>
     </div>
 </div>
