--- a/projects/issuetracker.html
+++ b/projects/issuetracker.html
@@ -2,7 +2,7 @@
 <h1 class="mt-5 mb-5 text-center">Issue Tracker</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/issuetracker/001.png" class="img-fluid image-border image-border" alt="image-lectures">
+    <img src="/resources/images/issuetracker/001.png" class="img-fluid image-border image-border" alt="image-lectures">
 </div>
 
 <div class="card details">
@@ -61,14 +61,14 @@
         <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
 
         <div class="container-fluid gallery mt-3">
-            <img src="../resources/images/issuetracker/001.png" class="img-fluid image-border image-border" alt="image-001">
-            <img src="../resources/images/issuetracker/002.png" class="img-fluid image-border image-border" alt="image-002">
-            <img src="../resources/images/issuetracker/003.png" class="img-fluid image-border image-border" alt="image-003">
-            <img src="../resources/images/issuetracker/004.png" class="img-fluid image-border image-border" alt="image-004">
-            <img src="../resources/images/issuetracker/005.png" class="img-fluid image-border image-border" alt="image-005">
-            <img src="../resources/images/issuetracker/006.png" class="img-fluid image-border image-border" alt="image-006">
-            <img src="../resources/images/issuetracker/007.png" class="img-fluid image-border image-border" alt="image-007">
-            <img src="../resources/images/issuetracker/008.png" class="img-fluid image-border image-border" alt="image-008">
+            <img src="/resources/images/issuetracker/001.png" class="img-fluid image-border image-border" alt="image-001">
+            <img src="/resources/images/issuetracker/002.png" class="img-fluid image-border image-border" alt="image-002">
+            <img src="/resources/images/issuetracker/003.png" class="img-fluid image-border image-border" alt="image-003">
+            <img src="/resources/images/issuetracker/004.png" class="img-fluid image-border image-border" alt="image-004">
+            <img src="/resources/images/issuetracker/005.png" class="img-fluid image-border image-border" alt="image-005">
+            <img src="/resources/images/issuetracker/006.png" class="img-fluid image-border image-border" alt="image-006">
+            <img src="/resources/images/issuetracker/007.png" class="img-fluid image-border image-border" alt="image-007">
+            <img src="/resources/images/issuetracker/008.png" class="img-fluid image-border image-border" alt="image-008">
         </div>
     </div>
 </div>
