--- a/projects/pos.html
+++ b/projects/pos.html
@@ -2,7 +2,7 @@
 <h1 class="mt-5 mb-5 text-center">POS System (Point of Sale)</h1>
 
 <div class="container-fluid gallery mt-5">
-    <img src="../resources/images/pos/pos.png" class="img-fluid image-border image-border" alt="image-001">
+    <img src="/resources/images/pos/pos.png" class="img-fluid image-border image-border" alt="image-001">
 </div>
 
 <div class="card details">
@@ -63,20 +63,20 @@
         <h5 class="card-subtitle mb-2 text-muted">View Project</h5>
 
         <div class="container-fluid gallery mt-3">
-            <img src="../resources/images/pos/001.png" class="img-fluid image-border image-border" alt="image-001">
-            <img src="../resources/images/pos/002.png" class="img-fluid image-border image-border" alt="image-002">
-            <img src="../resources/images/pos/003.png" class="img-fluid image-border image-border" alt="image-003">
-            <img src="../resources/images/pos/004.png" class="img-fluid image-border image-border" alt="image-004">
-            <img src="../resources/images/pos/005.png" class="img-fluid image-border image-border" alt="image-005">
-            <img src="../resources/images/pos/006.png" class="img-fluid image-border image-border" alt="image-006">
-            <img src="../resources/images/pos/007.png" class="img-fluid image-border image-border" alt="image-007">
-            <img src="../resources/images/pos/008.png" class="img-fluid image-border image-border" alt="image-008">
-            <img src="../resources/images/pos/009.png" class="img-fluid image-border image-border" alt="image-009">
-            <img src="../resources/images/pos/010.png" class="img-fluid image-border image-border" alt="image-010">
-            <img src="../resources/images/pos/011.png" class="img-fluid image-border image-border" alt="image-011">
-            <img src="../resources/images/pos/012.png" class="img-fluid image-border image-border" alt="image-012">
-            <img src="../resources/images/pos/013.png" class="img-fluid image-border image-border" alt="image-013">
-            <img src="../resources/images/pos/014.png" class="img-fluid image-border image-border" alt="image-014">
+            <img src="/resources/images/pos/001.png" class="img-fluid image-border image-border" alt="image-001">
+            <img src="/resources/images/pos/002.png" class="img-fluid image-border image-border" alt="image-002">
+            <img src="/resources/images/pos/003.png" class="img-fluid image-border image-border" alt="image-003">
+            <img src="/resources/images/pos/004.png" class="img-fluid image-border image-border" alt="image-004">
+            <img src="/resources/images/pos/005.png" class="img-fluid image-border image-border" alt="image-005">
+            <img src="/resources/images/pos/006.png" class="img-fluid image-border image-border" alt="image-006">
+            <img src="/resources/images/pos/007.png" class="img-fluid image-border image-border" alt="image-007">
+            <img src="/resources/images/pos/008.png" class="img-fluid image-border image-border" alt="image-008">
+            <img src="/resources/images/pos/009.png" class="img-fluid image-border image-border" alt="image-009">
+            <img src="/resources/images/pos/010.png" class="img-fluid image-border image-border" alt="image-010">
+            <img src="/resources/images/pos/011.png" class="img-fluid image-border image-border" alt="image-011">
+            <img src="/resources/images/pos/012.png" class="img-fluid image-border image-border" alt="image-012">
+            <img src="/resources/images/pos/013.png" class="img-fluid image-border image-border" alt="image-013">
+            <img src="/resources/images/pos/014.png" class="img-fluid image-border image-border" alt="image-014">
         </div>
     </div>
 </div>
